<resources>
    <string name="app_name">ATM Empresa Consultoria</string>
    <string name="cd_logo">Logo da ATM empresa de consultoria</string>
    <string name="cd_menu_servicos">Menu servico</string>
    <string name="cd_menu_clientes">menu clientes</string>
    <string name="cd_menu_empresa">Menu empresa</string>
    <string name="cd_menu_contato">Menu contato</string>
    <string name="sobre_empresa">Sobre a empresa</string>
    <string name="empresa_conteudo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pulvinar consectetur mi, id volutpat ex posuere ac. Sed pretium sit amet turpis aliquet rutrum. Mauris nec ligula et purus cursus aliquet. Suspendisse sed pulvinar felis, in commodo massa. Nam congue, urna non sodales maximus, arcu lorem fringilla sem, a vestibulum metus ipsum et lectus. Maecenas consequat dui massa, et varius metus interdum in. Nunc maximus ligula at imperdiet mollis. Aenean magna dui, pharetra ac iaculis eu, eleifend sagittis elit. Sed cursus sapien erat, vitae dapibus justo imperdiet dignissim. Morbi nisi arcu, scelerisque non commodo eget, pellentesque eget nisl. Integer fringilla malesuada tortor sed cursus.  Fusce porta dictum ornare. Sed eget dictum libero, vitae facilisis massa. Vivamus porta bibendum est non finibus. Suspendisse eleifend lobortis felis, eu dapibus risus suscipit eu. Fusce vestibulum ex eget convallis pellentesque. Nam a lorem sed erat faucibus consectetur. Etiam mauris dolor, gravida at porta pellentesque, vehicula sit amet justo. Duis rhoncus auctor ipsum, a ultricies diam accumsan nec. Mauris quis venenatis purus. Ut mollis id velit sit amet euismod. Cras a eros vel odio porta aliquet eu a felis. Vivamus sed ipsum et metus molestie consectetur. Nulla auctor nisl a nisi condimentum, sit amet ornare augue hendrerit. Suspendisse vitae molestie arcu. Praesent hendrerit nulla a arcu lacinia, sit amet fringilla urna vulputate. Nulla consequat mi eu ante sagittis tincidunt. Cras non enim a ex blandit viverra. Nulla facilisi. Proin elementum in ante eget aliquam. Nulla tristique eu nisi non dictum. Etiam blandit enim vitae sodales ornare.Cras augue libero, imperdiet a ornare a, sodales sit amet neque. Aenean sodales finibus est, in vehicula libero venenatis aliquam. Phasellus rhoncus elementum erat, ut varius turpis elementum id. Mauris et tincidunt libero. Proin commodo magna posuere viverra consectetur. Morbi at blandit est. Integer non felis sem. Cras pretium porttitor tincidunt. Nulla non ultricies augue, nec mollis felis. Donec blandit, lacus id fermentum posuere, massa eros egestas leo, et ultricies augue quam vitae leo. In urna augue, porttitor quis eleifend at, consectetur ac ante.</string>
    <string name="sobre_servicos">Serviços</string>
    <string name="servico_consultoria">Consultoria</string>
    <string name="servico_processos">Processos</string>
    <string name="servico_acompanhamento">Acompanhamento de projetos</string>
    <string name="sobre_clientes">Nossos clientes</string>
    <string name="detalhe_sys">Empresa de Desenvolvimento de sistemas</string>
    <string name="detalhe_rms">Empresa de auditoria</string>
    <string name="sobre_contato">Contato</string>
    <string name="contato_email">Email: consultoria@atm.com.br</string>
    <string name="contato_telefone">Telefone: (11) 3333-2222</string>
    <string name="contato_celular">Celular: (11) 99999-8888</string>
</resources>
